JBPM-7916 horizontal overflow on doc page, refresh doc on forms change, avoid page flickering when selecting doc tab

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/documentation/BPMNDocumentationView.css
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/documentation/BPMNDocumentationView.css
@@ -16,6 +16,7 @@
 
 .documentationPanel {
     width: 100%;
+    min-width: 800px;
     overflow: auto;
 }
 
